--- a/CONTEÚDOS/zoologia.css
+++ b/CONTEÚDOS/zoologia.css
@@ -178,6 +178,7 @@ nav a {
     background-color: var(--green);
     margin-top: 5px;
     margin-bottom: -20px;
+    cursor: pointer;
 }
 
 .fundo {
@@ -319,6 +320,7 @@ nav a {
     color: var(--dark-green);
     background-color: var(--green);
     margin-top: -20px;
+    cursor: pointer;
 }
 
 .botao-3{
@@ -334,6 +336,7 @@ nav a {
     color: var(--dark-green);
     background-color: var(--green);
     margin-top: -20px;
+    cursor: pointer;
 }
 
 .botao-seta{
@@ -349,6 +352,7 @@ nav a {
     color: var(--dark-green);
     background-color: var(--green);
     margin-top: -20px;
+    cursor: pointer;
 }
 
 .terceiro{
@@ -459,6 +463,7 @@ nav a {
     border-radius: 50px;
     color: var(--dark-green);
     background-color: var(--green);
+    cursor: pointer;
 }
 
 .botao-4{
@@ -475,6 +480,7 @@ nav a {
     color: var(--dark-green);
     background-color: var(--green);
     margin-top: -20px;
+    cursor: pointer;
 }
 
 .botao-5{
@@ -490,6 +496,7 @@ nav a {
     color: var(--dark-green);
     background-color: var(--green);
     margin-top: -20px;
+    cursor: pointer;
 }
 
 .botao-seta-3{
@@ -504,6 +511,7 @@ nav a {
     color: var(--dark-green);
     background-color: var(--green);
     margin-top: -20px;
+    cursor: pointer;
 }
 
 .quarto{
@@ -602,6 +610,7 @@ nav a {
     color: var(--dark-green);
     background-color: var(--green);
     margin-top: -20px;
+    cursor: pointer;
 }
 
 .botao-7{
@@ -616,7 +625,8 @@ nav a {
     margin-right: 35px;
     color: var(--dark-green);
     background-color: var(--green);
-    margin-top: -20px;   
+    margin-top: -20px;
+    cursor: pointer;   
 }
 
 .botao-seta-4{
@@ -631,6 +641,7 @@ nav a {
     color: var(--dark-green);
     background-color: var(--green);
     margin-top: -20px;
+    cursor: pointer;
 }
 
 .quinto{
@@ -717,6 +728,7 @@ nav a {
     background-color: var(--green);
     margin-top: 5px;
     margin-bottom: -20px;
+    cursor: pointer;
 }
 
 .botao-9{
@@ -733,6 +745,7 @@ nav a {
     background-color: var(--green);
     margin-top: 5px;
     margin-bottom: -20px;
+    cursor: pointer;
 }
 
 .sexto{
@@ -836,6 +849,7 @@ nav a {
     background-color: var(--green);
     margin-top: 5px;
     margin-bottom: -20px;
+    cursor: pointer;
 }
 
 .botao-11{
@@ -852,6 +866,7 @@ nav a {
     background-color: var(--green);
     margin-top: 5px;
     margin-bottom: -20px;
+    cursor: pointer;
 }
 
 .botao-seta-5{
@@ -867,6 +882,7 @@ nav a {
     color: var(--dark-green);
     background-color: var(--green);
     margin-top: -20px;
+    cursor: pointer;
 }
 
 .setimo{
@@ -963,6 +979,7 @@ nav a {
     background-color: var(--green);
     margin-top: 5px;
     margin-bottom: -20px;
+    cursor: pointer;
 }
 
 .botao-13{
@@ -979,6 +996,7 @@ nav a {
     background-color: var(--green);
     margin-top: 5px;
     margin-bottom: -20px;
+    cursor: pointer;
 }
 
 .botao-seta-6{
@@ -994,6 +1012,7 @@ nav a {
     color: var(--dark-green);
     background-color: var(--green);
     margin-top: -20px;
+    cursor: pointer;
 }
 
 .oitavo{
@@ -1071,6 +1090,7 @@ nav a {
     background-color: var(--green);
     margin-top: 5px;
     margin-bottom: -20px;
+    cursor: pointer;
 }
 
 .botao-15{
@@ -1087,4 +1107,5 @@ nav a {
     background-color: var(--green);
     margin-top: 5px;
     margin-bottom: -20px;
+    cursor: pointer;
 }
