--- a/CONTEÚDOS/botanica.css
+++ b/CONTEÚDOS/botanica.css
@@ -126,7 +126,7 @@ nav a {
     font-size: 75px;
     grid-area: 1 / 1;
     height: auto;
-    margin-top: -640px;
+    margin-top: -590px;
     margin-bottom: 10px;
     grid-template-columns: 1fr 1fr;
     letter-spacing: 4px;
@@ -187,11 +187,28 @@ nav a {
     cursor: pointer;
 }
 
+.fundo {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: auto;
+    display: block;
+    margin-bottom: -50px;
+}
+
+.fundo2 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: auto;
+    display: block;
+    margin-top: 50px;
+    margin-bottom: -50px;
+}
+
 .logo-inicio-2{
     z-index: 3;
     margin-bottom: -250px;
     margin-right: 1240px;
-    margin-top: 60px;
+    margin-top: 100px;
 }
 
 .logo-2{
@@ -199,18 +216,19 @@ nav a {
     height: auto;
     max-width: 120px;
     width: auto;
+    margin-top: -100px;
 }
 
 .segundo{
     position: relative;
-    top: 15px;
+    top: 60px;
     left: 80px;
     z-index: 3;
     display: grid;
     font-size: 75px;
     grid-area: 1 / 1;
     height: auto;
-    margin-top: -640px;
+    margin-top: -750px;
     margin-bottom: 10px;
     grid-template-columns: 1fr 1fr;
     letter-spacing: 4px;
@@ -226,7 +244,7 @@ nav a {
     letter-spacing: 2px;
     display: flex;
     padding: 0 150px;
-    bottom: 45px;
+    bottom: 10px;
     right: 580px;
     margin-left: 590px;
     margin-top: 70px;
@@ -238,24 +256,22 @@ nav a {
     position: relative;
     max-width: 300px;
     margin-left: 150px;
-    margin-bottom: 280px;
-    margin-top: -250px;
     margin-right: -70px;
+    bottom: 210px;
 }
 
 .img-3{
     position: relative;
     max-width: 290px;
     margin-left: -330px;
-    margin-bottom: 270px;
-    margin-top: -250px;
     margin-right: -70px;
+    bottom: 210px;
 }
 
 .seta-2{
     position: relative;
     left: -90px;
-    bottom: 35px;
+    top: 30px;
     max-width: 450px;
     margin-left: -30px;
     margin-bottom: 50px;
@@ -263,7 +279,7 @@ nav a {
 
 .lista{
     position: relative;
-    bottom: 60px;
+    bottom: 10px;
     left: -15px;
     margin-left: 850px;
     display: flex;
@@ -276,8 +292,8 @@ nav a {
 
 .botao-2{
     position: relative;
-    bottom: 15px;
-    right: -300px;
+    top: 40px;
+    right: -240px;
     padding: 5px 80px;
     font-size: 27px;
     border: none;
@@ -293,8 +309,8 @@ nav a {
 
 .botao-3{
     position: relative;
-    bottom: 15px;
-    right: -300px;
+    top: 40px;
+    right: -240px;
     padding: 5px 80px;
     font-size: 27px;
     border: none;
@@ -308,6 +324,24 @@ nav a {
     cursor: pointer;
 }
 
+.fundo3 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -40px;
+    margin-bottom: 50px;
+}
+
+.fundo4 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -60px;
+    margin-bottom: -50px;
+}
+
 .terceiro{
     position: relative;
     top: 15px;
@@ -317,7 +351,7 @@ nav a {
     font-size: 75px;
     grid-area: 1 / 1;
     height: auto;
-    margin-top: -640px;
+    margin-top: -700px;
     margin-bottom: 10px;
     grid-template-columns: 1fr 1fr;
     letter-spacing: 4px;
@@ -366,7 +400,7 @@ nav a {
 
 .botao-4{
     position: relative;
-    bottom: 15px;
+    top: 40px;
     right: -300px;
     padding: 5px 80px;
     font-size: 27px;
@@ -383,7 +417,7 @@ nav a {
 
 .botao-5{
     position: relative;
-    bottom: 15px;
+    top: 40px;
     right: -300px;
     padding: 5px 80px;
     font-size: 27px;
@@ -400,7 +434,7 @@ nav a {
 
 .botao-seta{
     position: relative;
-    top: 25px;
+    top: 90px;
     right: -80px;
     padding: 10px 10px;
     font-size: 27px;
@@ -414,6 +448,24 @@ nav a {
     cursor: pointer;
 }
 
+.fundo5 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -40px;
+    margin-bottom: 50px;
+}
+
+.fundo6 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -60px;
+    margin-bottom: -50px;
+}
+
 .quarto{
     position: relative;
     top: 15px;
@@ -423,7 +475,7 @@ nav a {
     font-size: 75px;
     grid-area: 1 / 1;
     height: auto;
-    margin-top: -640px;
+    margin-top: -700px;
     margin-bottom: 10px;
     grid-template-columns: 1fr 1fr;
     letter-spacing: 4px;
@@ -522,7 +574,7 @@ nav a {
 
 .botao-6{
     position: relative;
-    bottom: 20px;
+    top: 10px;
     right: -210px;
     padding: 5px 80px;
     font-size: 27px;
@@ -539,7 +591,7 @@ nav a {
 
 .botao-seta-2{
     position: relative;
-    bottom: 30px;
+    top: 20px;
     right: -1320px;
     padding: 10px 10px;
     font-size: 27px;
@@ -554,7 +606,7 @@ nav a {
 
 .botao-seta-3{
     position: relative;
-    bottom: 30px;
+    top: 20px;
     right: 590px;
     padding: 10px 10px;
     font-size: 27px;
@@ -569,7 +621,7 @@ nav a {
 
 .botao-7{
     position: relative;
-    bottom: 20px;
+    top: 10px;
     right: -210px;
     padding: 5px 80px;
     font-size: 27px;
@@ -584,6 +636,24 @@ nav a {
     cursor: pointer;
 }
 
+.fundo7 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -40px;
+    margin-bottom: 50px;
+}
+
+.fundo8 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -60px;
+    margin-bottom: -50px;
+}
+
 .quinto{
     position: relative;
     top: 15px;
@@ -593,7 +663,7 @@ nav a {
     font-size: 75px;
     grid-area: 1 / 1;
     height: auto;
-    margin-top: -640px;
+    margin-top: -700px;
     margin-bottom: 10px;
     grid-template-columns: 1fr 1fr;
     letter-spacing: 4px;
@@ -664,7 +734,7 @@ nav a {
 
 .botao-8{
     position: relative;
-    bottom: 40px;
+    top: 10px;
     right: -480px;
     padding: 5px 80px;
     font-size: 27px;
@@ -681,7 +751,7 @@ nav a {
 
 .botao-9{
     position: relative;
-    bottom: 40px;
+    top: 10px;
     right: -480px;
     padding: 5px 80px;
     font-size: 27px;
@@ -698,7 +768,7 @@ nav a {
 
 .botao-seta-4{
     position: relative;
-    bottom: -20px;
+    top: 70px;
     right: -80px;
     padding: 10px 10px;
     font-size: 27px;
@@ -713,7 +783,7 @@ nav a {
 
 .botao-seta-5{
     position: relative;
-    bottom: 40px;
+    top: 20px;
     right: 500px;
     padding: 10px 10px;
     font-size: 27px;
@@ -726,6 +796,24 @@ nav a {
     cursor: pointer;
 }
 
+.fundo9 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -40px;
+    margin-bottom: 50px;
+}
+
+.fundo10 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -60px;
+    margin-bottom: -50px;
+}
+
 .sexto{
     position: relative;
     top: 15px;
@@ -735,7 +823,7 @@ nav a {
     font-size: 75px;
     grid-area: 1 / 1;
     height: auto;
-    margin-top: -640px;
+    margin-top: -700px;
     margin-bottom: 10px;
     grid-template-columns: 1fr 1fr;
     letter-spacing: 4px;
@@ -803,7 +891,7 @@ nav a {
 
 .botao-10{
     position: relative;
-    bottom: 30px;
+    top: 20px;
     right: -480px;
     padding: 5px 80px;
     font-size: 27px;
@@ -820,7 +908,7 @@ nav a {
 
 .botao-11{
     position: relative;
-    bottom: 30px;
+    top: 20px;
     right: -480px;
     padding: 5px 80px;
     font-size: 27px;
@@ -837,7 +925,7 @@ nav a {
 
 .botao-seta-6{
     position: relative;
-    bottom: 40px;
+    top: 20px;
     right: -770px;
     padding: 10px 10px;
     font-size: 27px;
@@ -850,6 +938,24 @@ nav a {
     cursor: pointer;
 }
 
+.fundo11 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -40px;
+    margin-bottom: 50px;
+}
+
+.fundo12 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -60px;
+    margin-bottom: -50px;
+}
+
 .setimo{
     position: relative;
     top: 15px;
@@ -859,7 +965,7 @@ nav a {
     font-size: 75px;
     grid-area: 1 / 1;
     height: auto;
-    margin-top: -640px;
+    margin-top: -700px;
     margin-bottom: 10px;
     grid-template-columns: 1fr 1fr;
     letter-spacing: 4px;
@@ -932,7 +1038,7 @@ nav a {
 
 .botao-12{
     position: relative;
-    bottom: -5px;
+    top: 40px;
     right: -480px;
     padding: 5px 80px;
     font-size: 27px;
@@ -949,7 +1055,7 @@ nav a {
 
 .botao-13{
     position: relative;
-    bottom: -5px;
+    top: 40px;
     right: -480px;
     padding: 5px 80px;
     font-size: 27px;
@@ -966,7 +1072,7 @@ nav a {
 
 .botao-seta-7{
     position: relative;
-    bottom: 2px;
+    top: 40px;
     right: -800px;
     padding: 10px 10px;
     font-size: 27px;
@@ -979,6 +1085,24 @@ nav a {
     cursor: pointer;
 }
 
+.fundo13 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -40px;
+    margin-bottom: 50px;
+}
+
+.fundo14 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -60px;
+    margin-bottom: -50px;
+}
+
 .oitavo{
     position: relative;
     top: 15px;
@@ -988,7 +1112,7 @@ nav a {
     font-size: 75px;
     grid-area: 1 / 1;
     height: auto;
-    margin-top: -640px;
+    margin-top: -700px;
     margin-bottom: 10px;
     grid-template-columns: 1fr 1fr;
     letter-spacing: 4px;
@@ -1016,7 +1140,8 @@ nav a {
 
 .lista-4{
     position: relative;
-    left: 100px;
+    margin-left: 50px;
+    left: 50px;
     top: 50px;
     font-size: 25px;
     color: var(--dark-green);
@@ -1050,7 +1175,7 @@ nav a {
 
 .botao-14{
     position: relative;
-    bottom: 30px;
+    top: 20px;
     right: -350px;
     padding: 5px 80px;
     font-size: 27px;
@@ -1067,7 +1192,7 @@ nav a {
 
 .botao-15{
     position: relative;
-    bottom: 30px;
+    top: 20px;
     right: -350px;
     padding: 5px 80px;
     font-size: 27px;
@@ -1084,7 +1209,7 @@ nav a {
 
 .botao-seta-8{
     position: relative;
-    bottom: 25px;
+    top: 20px;
     right: -700px;
     padding: 10px 10px;
     font-size: 27px;
@@ -1097,6 +1222,24 @@ nav a {
     cursor: pointer;
 }
 
+.fundo15 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -40px;
+    margin-bottom: 50px;
+}
+
+.fundo16 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -60px;
+    margin-bottom: -50px;
+}
+
 .nono{
     position: relative;
     top: 15px;
@@ -1106,7 +1249,7 @@ nav a {
     font-size: 75px;
     grid-area: 1 / 1;
     height: auto;
-    margin-top: -640px;
+    margin-top: -700px;
     margin-bottom: 10px;
     grid-template-columns: 1fr 1fr;
     letter-spacing: 4px;
@@ -1161,7 +1304,7 @@ nav a {
 
 .botao-16{
     position: relative;
-    bottom: 10px;
+    top: 30px;
     right: -500px;
     padding: 5px 80px;
     font-size: 27px;
@@ -1176,7 +1319,7 @@ nav a {
 
 .botao-17{
     position: relative;
-    bottom: 10px;
+    top: 30px;;
     right: -500px;
     padding: 5px 80px;
     font-size: 27px;
@@ -1189,17 +1332,20 @@ nav a {
     cursor: pointer;
 }
 
-.fundo {
+.fundo17 {
     grid-area: 1 / 1;
     width: 100%;
-    height: auto;
-    display: block
+    height: 94vh;
+    display: block;
+    margin-top: -40px;
+    margin-bottom: 50px;
 }
 
-.fundo2 {
+.fundo18 {
     grid-area: 1 / 1;
     width: 100%;
-    height: auto;
+    height: 94vh;
     display: block;
-    margin-top: 50px;
+    margin-top: -60px;
+    margin-bottom: -50px;
 }
