--- a/CONTEÚDOS/conteudo.css
+++ b/CONTEÚDOS/conteudo.css
@@ -17,6 +17,28 @@
     position: relative;
 }
 
+body{
+    background: var(--white);
+    transition: 0.2s linear;
+}
+
+body.escuro{
+    background: var(--low-greenb);
+}
+
+.escuro ul li {
+    background: var(--dark-green);
+}
+
+.inicio.escuro{
+    background: var(--dark-green);
+}
+
+.escuro .botao{
+    background-color: var(--low-green);
+    color: var(--white);
+}
+
 :root {
     --light-green: #E4E6D9;
     --green: #C0CFB2;
@@ -127,7 +149,7 @@ nav a {
     font-size: 75px;
     grid-area: 1 / 1;
     height: auto;
-    margin-top: -640px;
+    margin-top: -589px;
     margin-bottom: 10px;
     grid-template-columns: 1fr 1fr;
     letter-spacing: 4px;
@@ -183,6 +205,7 @@ nav a {
     width: 100%;
     height: auto;
     display: block;
+    margin-bottom: -50px;
 }
 
 .fundo2 {
@@ -191,14 +214,14 @@ nav a {
     height: auto;
     display: block;
     margin-top: 50px;
+    margin-bottom: -50px;
 }
-
 
 .logo-inicio-2{
     z-index: 3;
     margin-bottom: -250px;
     margin-right: 1240px;
-    margin-top: 60px;
+    margin-top: 100px;
 }
 
 .logo-2{
@@ -206,6 +229,7 @@ nav a {
     height: auto;
     max-width: 120px;
     width: auto;
+    margin-top: -100px;
 }
 
 .segundo {
@@ -214,7 +238,7 @@ nav a {
     font-size: 75px;
     grid-area: 1 / 1;
     height: auto;
-    margin-top: -630px;
+    margin-top: -680px;
     margin-bottom: 10px;
     grid-template-columns: 1fr 1fr;
     letter-spacing: 4px;
@@ -253,29 +277,19 @@ nav a {
     color: var(--dark-green);
 }
 
-.circulo{
-    z-index: 2;
-    position: relative;
-    max-width: 550px;
-    display: grid;
-    grid-template-columns: 1fr;
-    margin-left: 900px;
-    margin-top: -650px;
-    margin-bottom: 270px;
-    gap: 5%;
-}
-
 .quinto-p{
     z-index: 4;
     position: relative;
     font-size: 25px;
     letter-spacing: 2px;
     display: flex;
-    padding: 0 90px;
+    padding: 15px 90px;
     bottom: 45px;
-    left: 50px;
+    left: -2px;
     margin-left: 850px;
     margin-top: -420px;
+    background-color: var(--green);
+    border-radius: 50px;
     color: var(--dark-green);
 }
 
@@ -285,7 +299,7 @@ nav a {
     max-width: 320px;
     margin-bottom: 50px;
     margin-left: 950px;
-    margin-top: -90px;
+    margin-top: -130px;
     margin-bottom: 10px;
 }
 
@@ -324,13 +338,31 @@ nav a {
     cursor: pointer;
 }
 
+.fundo3 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -60px;
+    margin-bottom: 50px;
+}
+
+.fundo4 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -60px;
+    margin-bottom: -30px;
+}
+
 .terceiro {
     z-index: 3;
     display: grid;
     font-size: 75px;
     grid-area: 1 / 1;
     height: auto;
-    margin-top: -630px;
+    margin-top: -670px;
     margin-bottom: 10px;
     grid-template-columns: 1fr 1fr;
     letter-spacing: 4px;
@@ -380,7 +412,7 @@ nav a {
 
 .botao-4{
     position: relative;
-    bottom: 10px;
+    bottom: -20px;
     padding: 5px 80px;
     font-size: 27px;
     border: none;
@@ -396,7 +428,7 @@ nav a {
 
 .botao-5{
     position: relative;
-    bottom: 10px;
+    bottom: -20px;
     padding: 5px 80px;
     font-size: 27px;
     border: none;
@@ -410,18 +442,36 @@ nav a {
     margin-bottom: 20px;
 }
 
+.fundo5 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -60px;
+    margin-bottom: 50px;
+}
+
+.fundo6 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -60px;
+    margin-bottom: -30px;
+}
+
 .quarto{
     z-index: 3;
     display: grid;
     font-size: 75px;
     grid-area: 1 / 1;
     height: auto;
-    margin-top: -630px;
+    margin-top: -650px;
     margin-bottom: 10px;
     grid-template-columns: 1fr 1fr;
     letter-spacing: 4px;
     font-weight: 300;
-    margin-left: 150px;
+    margin-left: 130px;
     color: var(--dark-green);
 }
 
@@ -430,7 +480,7 @@ nav a {
     letter-spacing: 2px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    margin-left: 170px;
+    margin-left: 150px;
     gap: 10%;
     margin-bottom: 50px;
     color: var(--dark-green);
@@ -441,7 +491,7 @@ nav a {
     letter-spacing: 2px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    margin-left: 170px;
+    margin-left: 150px;
     gap: 10%;
     color: var(--dark-green);
 }
@@ -450,7 +500,7 @@ nav a {
     max-width: 350px;
     display: flex;
     flex-direction: column;
-    margin-left: 800px;
+    margin-left: 750px;
     margin-top: -450px;
 }
 
@@ -465,7 +515,7 @@ nav a {
     max-width: 300px;
     display: flex;
     flex-direction: column;
-    margin-left: 1100px;
+    margin-left: 1050px;
     margin-top: -350px;
     margin-bottom: -100px;
 }
@@ -488,7 +538,7 @@ nav a {
     color: var(--dark-green);
     background-color: var(--green);
     margin-bottom: 25px;
-    margin-top: 100px;
+    margin-top: 110px;
     cursor: pointer;
 }
 
@@ -503,6 +553,24 @@ nav a {
     background-color: var(--green);
     cursor: pointer;
     
+}
+
+.fundo7 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -60px;
+    margin-bottom: 50px;
+}
+
+.fundo8 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -60px;
+    margin-bottom: -30px;
 }
 
 .quinto{
@@ -590,4 +658,22 @@ nav a {
     color: var(--dark-green);
     background-color: var(--green);
     cursor: pointer;
+}
+
+.fundo9 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -60px;
+    margin-bottom: 50px;
+}
+
+.fundo10 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -60px;
+    margin-bottom: -30px;
 }
