--- a/CONTEÚDOS/sobrenos.css
+++ b/CONTEÚDOS/sobrenos.css
@@ -194,7 +194,7 @@ nav a {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 10px;
-    margin-top: -250px;
+    margin-top: -200px;
     margin-left: 140px;
     font-size: 25px;
 }
@@ -208,7 +208,8 @@ nav a {
     grid-area: 1 / 1;
     width: 100%;
     height: auto;
-    display: block
+    display: block;
+    margin-bottom: -50px;
 }
 
 .fundo2 {
@@ -216,5 +217,6 @@ nav a {
     width: 100%;
     height: auto;
     display: block;
-    margin-top: 30px;
+    margin-top: 50px;
+    margin-bottom: -50px;
 }
