--- a/CONTEÚDOS/zoologia.css
+++ b/CONTEÚDOS/zoologia.css
@@ -125,7 +125,7 @@ nav a {
     font-size: 75px;
     grid-area: 1 / 1;
     height: auto;
-    margin-top: -640px;
+    margin-top: -570px;
     margin-bottom: 10px;
     grid-template-columns: 1fr 1fr;
     letter-spacing: 4px;
@@ -185,7 +185,8 @@ nav a {
     grid-area: 1 / 1;
     width: 100%;
     height: auto;
-    display: block
+    display: block;
+    margin-bottom: -50px;
 }
 
 .fundo2 {
@@ -194,13 +195,14 @@ nav a {
     height: auto;
     display: block;
     margin-top: 50px;
+    margin-bottom: -50px;
 }
 
 .logo-inicio-2{
     z-index: 3;
     margin-bottom: -250px;
     margin-right: 1240px;
-    margin-top: 60px;
+    margin-top: 100px;
 }
 
 .logo-2{
@@ -208,6 +210,7 @@ nav a {
     height: auto;
     max-width: 120px;
     width: auto;
+    margin-top: -100px;
 }
 
 .segundo{
@@ -219,7 +222,7 @@ nav a {
     font-size: 75px;
     grid-area: 1 / 1;
     height: auto;
-    margin-top: -640px;
+    margin-top: -680px;
     margin-bottom: 10px;
     grid-template-columns: 1fr 1fr;
     letter-spacing: 4px;
@@ -341,7 +344,6 @@ nav a {
 
 .botao-seta{
     position: relative;
-    bottom: 25px;
     right: -600px;
     padding: 10px 10px;
     font-size: 27px;
@@ -355,6 +357,24 @@ nav a {
     cursor: pointer;
 }
 
+.fundo3 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -40px;
+    margin-bottom: 50px;
+}
+
+.fundo4 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -60px;
+    margin-bottom: -50px;
+}
+
 .terceiro{
     position: relative;
     top: 15px;
@@ -364,7 +384,7 @@ nav a {
     font-size: 75px;
     grid-area: 1 / 1;
     height: auto;
-    margin-top: -640px;
+    margin-top: -700px;
     margin-bottom: 10px;
     grid-template-columns: 1fr 1fr;
     letter-spacing: 4px;
@@ -456,7 +476,7 @@ nav a {
 .botao-seta-2{
     position: relative;
     left: 10px;
-    bottom: 25px;
+    bottom: -20px;
     font-size: 27px;
     padding: 10px 10px;
     border: none;
@@ -501,7 +521,7 @@ nav a {
 
 .botao-seta-3{
     position: relative;
-    bottom: 60px;
+    bottom: 10px;
     right: -1320px;
     padding: 10px 10px;
     font-size: 27px;
@@ -514,6 +534,24 @@ nav a {
     cursor: pointer;
 }
 
+.fundo5 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -40px;
+    margin-bottom: 50px;
+}
+
+.fundo6 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -60px;
+    margin-bottom: -50px;
+}
+
 .quarto{
     position: relative;
     top: 15px;
@@ -523,7 +561,7 @@ nav a {
     font-size: 75px;
     grid-area: 1 / 1;
     height: auto;
-    margin-top: -640px;
+    margin-top: -700px;
     margin-bottom: 10px;
     grid-template-columns: 1fr 1fr;
     letter-spacing: 4px;
@@ -631,7 +669,7 @@ nav a {
 
 .botao-seta-4{
     position: relative;
-    bottom: -30px;
+    top: 90px;
     right: -40px;
     padding: 10px 10px;
     font-size: 27px;
@@ -644,6 +682,24 @@ nav a {
     cursor: pointer;
 }
 
+.fundo7 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -40px;
+    margin-bottom: 50px;
+}
+
+.fundo8 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -60px;
+    margin-bottom: -50px;
+}
+
 .quinto{
     position: relative;
     top: 15px;
@@ -653,7 +709,7 @@ nav a {
     font-size: 75px;
     grid-area: 1 / 1;
     height: auto;
-    margin-top: -640px;
+    margin-top: -700px;
     margin-bottom: 10px;
     grid-template-columns: 1fr 1fr;
     letter-spacing: 4px;
@@ -716,7 +772,7 @@ nav a {
 
 .botao-8{
     position: relative;
-    bottom: 15px;
+    top: 20px;
     right: 250px;
     padding: 5px 80px;
     font-size: 27px;
@@ -733,7 +789,7 @@ nav a {
 
 .botao-9{
     position: relative;
-    bottom: 15px;
+    top: 20px;
     right: 240px;
     padding: 5px 80px;
     font-size: 27px;
@@ -748,16 +804,34 @@ nav a {
     cursor: pointer;
 }
 
+.fundo9 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -40px;
+    margin-bottom: 50px;
+}
+
+.fundo10 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -60px;
+    margin-bottom: -50px;
+}
+
 .sexto{
     position: relative;
-    top: 15px;
+    top: 90px;
     left: 80px;
     z-index: 3;
     display: grid;
     font-size: 75px;
     grid-area: 1 / 1;
     height: auto;
-    margin-top: -640px;
+    margin-top: -780px;
     margin-bottom: 10px;
     grid-template-columns: 1fr 1fr;
     letter-spacing: 4px;
@@ -773,7 +847,7 @@ nav a {
     letter-spacing: 2px;
     display: flex;
     padding: 0 90px;
-    bottom: 45px;
+    bottom: -20px;
     right: 580px;
     margin-left: 650px;
     margin-top: 70px;
@@ -783,13 +857,13 @@ nav a {
 .img-3{
     max-width: 300px;
     position: relative;
-    left: 150px;
-    margin-bottom: 260px;
+    left: 170px;
+    bottom: 180px;
 }
 
 .seta-4{
     position: relative;
-    bottom: 150px;
+    bottom: 100px;
     max-width: 450px;
     margin-left: 100px;
     margin-bottom: 50px;
@@ -800,14 +874,14 @@ nav a {
     position: relative;
     max-width: 400px;
     margin-left: -10px;
-    margin-bottom: 550px;
     margin-top: -350px;
     margin-right: -70px;
+    bottom: 450px;
 }
 
 .sexto-2{
     position: relative;
-    bottom: 100px;
+    bottom: -30px;
     z-index: 3;
     display: grid;
     font-size: 45px;
@@ -824,7 +898,7 @@ nav a {
 
 .lista-2{
     position: relative;
-    top: 120px;
+    top: 250px;
     left: -15px;
     margin-left: 850px;
     display: flex;
@@ -837,7 +911,7 @@ nav a {
 
 .botao-10{
     position: relative;
-    bottom: 5px;
+    top: 150px;
     right: -420px;
     padding: 5px 80px;
     font-size: 27px;
@@ -854,7 +928,7 @@ nav a {
 
 .botao-11{
     position: relative;
-    bottom: 5px;
+    top: 150px;
     right: -420px;
     padding: 5px 80px;
     font-size: 27px;
@@ -871,7 +945,7 @@ nav a {
 
 .botao-seta-5{
     position: relative;
-    bottom: 5px;
+    top: 150px;
     right: -780px;
     padding: 10px 10px;
     font-size: 27px;
@@ -885,16 +959,34 @@ nav a {
     cursor: pointer;
 }
 
+.fundo11 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -40px;
+    margin-bottom: 50px;
+}
+
+.fundo12 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -60px;
+    margin-bottom: -50px;
+}
+
 .setimo{
     position: relative;
-    top: 15px;
+    top: 60px;
     left: 80px;
     z-index: 3;
     display: grid;
     font-size: 75px;
     grid-area: 1 / 1;
     height: auto;
-    margin-top: -640px;
+    margin-top: -750px;
     margin-bottom: 10px;
     grid-template-columns: 1fr 1fr;
     letter-spacing: 4px;
@@ -910,7 +1002,7 @@ nav a {
     letter-spacing: 2px;
     display: flex;
     padding: 0 90px;
-    bottom: 45px;
+    top: 10px;
     right: 580px;
     margin-left: 650px;
     margin-top: 70px;
@@ -921,14 +1013,13 @@ nav a {
     position: relative;
     max-width: 400px;
     margin-left: 150px;
-    margin-bottom: 230px;
-    margin-top: -250px;
     margin-right: -70px;
+    bottom: 170px;
 }
 
 .seta-5{
     position: relative;
-    bottom: 150px;
+    bottom: 100px;
     max-width: 450px;
     margin-left: -30px;
     margin-bottom: 50px;
@@ -937,7 +1028,7 @@ nav a {
 
 .setimo-2{
     position: relative;
-    bottom: 260px;
+    bottom: 210px;
     z-index: 3;
     display: grid;
     font-size: 45px;
@@ -954,7 +1045,7 @@ nav a {
 
 .lista-3{
     position: relative;
-    bottom: 60px;
+    bottom: 10px;
     left: -15px;
     margin-left: 850px;
     display: flex;
@@ -967,7 +1058,7 @@ nav a {
 
 .botao-12{
     position: relative;
-    bottom: 5px;
+    top: 80px;
     right: -420px;
     padding: 5px 80px;
     font-size: 27px;
@@ -984,7 +1075,7 @@ nav a {
 
 .botao-13{
     position: relative;
-    bottom: 5px;
+    top: 80px;
     right: -420px;
     padding: 5px 80px;
     font-size: 27px;
@@ -1001,7 +1092,7 @@ nav a {
 
 .botao-seta-6{
     position: relative;
-    bottom: 5px;
+    top: 90px;
     right: -780px;
     padding: 10px 10px;
     font-size: 27px;
@@ -1015,6 +1106,24 @@ nav a {
     cursor: pointer;
 }
 
+.fundo13 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -40px;
+    margin-bottom: 50px;
+}
+
+.fundo14 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -60px;
+    margin-bottom: -50px;
+}
+
 .oitavo{
     position: relative;
     top: 15px;
@@ -1024,7 +1133,7 @@ nav a {
     font-size: 75px;
     grid-area: 1 / 1;
     height: auto;
-    margin-top: -640px;
+    margin-top: -700px;
     margin-bottom: 10px;
     grid-template-columns: 1fr 1fr;
     letter-spacing: 4px;
@@ -1078,7 +1187,7 @@ nav a {
 
 .botao-14{
     position: relative;
-    bottom: 5px;
+    top: 30px;
     right: -420px;
     padding: 5px 80px;
     font-size: 27px;
@@ -1095,7 +1204,7 @@ nav a {
 
 .botao-15{
     position: relative;
-    bottom: 5px;
+    top: 30px;
     right: -420px;
     padding: 5px 80px;
     font-size: 27px;
@@ -1108,4 +1217,22 @@ nav a {
     margin-top: 5px;
     margin-bottom: -20px;
     cursor: pointer;
+}
+
+.fundo15 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -40px;
+    margin-bottom: 50px;
+}
+
+.fundo16 {
+    grid-area: 1 / 1;
+    width: 100%;
+    height: 94vh;
+    display: block;
+    margin-top: -60px;
+    margin-bottom: -50px;
 }
