--- a/style.css
+++ b/style.css
@@ -6,6 +6,15 @@
 
 }
 
+body{
+    background: var(--white);
+    transition: 0.2s linear;
+}
+
+body.escuro{
+    background: var(--low-greenb);
+}
+
 .conteudo {
     max-width: 1440px;
     margin: auto;
@@ -24,6 +33,7 @@
     --dark-green: #648A70;
     --white: #fff;
     --low-green: #45624E;
+    --low-greenb: rgb(69, 98, 78, 0.6);
 }
 
 header {
@@ -55,6 +65,9 @@ ul li {
     letter-spacing: 5px;
 }
 
+.escuro ul li {
+    background: var(--dark-green);
+}
 
 nav a {
     text-decoration: none;
@@ -100,6 +113,10 @@ nav a {
     z-index: 3;    
 }
 
+.inicio.escuro{
+    background: var(--dark-green);
+}
+
 .menu{
     position: relative;
     top: 65px;
@@ -118,6 +135,15 @@ nav a {
     height: auto;
 }
 
+.menu-items{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    top: 350px;
+    right: 70px;
+    z-index: 4;
+}
+
 .imagens {
     display: grid;
     place-items: center;
@@ -126,7 +152,7 @@ nav a {
 
 .titulo{
     position: relative;
-    top: -200px; 
+    top: 150px;
     left: 50%; 
     transform: translate(-50%, -50%); 
     z-index: 7;
@@ -135,30 +161,15 @@ nav a {
     font-size: 60px;
     font-weight: 300;
     letter-spacing: 2px;
-    color: var(--light-green);
-}
-
-.sombra {
-    position: absolute;
-    top: 30%;
-    bottom: 0;
-    left: 0;
-    right: 3%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    height: auto;
-    opacity: 0.6;
-    z-index: 4;
- 
+    color: var(--white);
+    margin-top: -380px;
 }
 
 .animais{
     max-width: 700px;
     width: auto;
     position: absolute;
-    top: 26%;
+    top: 35%;
     bottom: 0;
     left: 0;
     right: 0;
@@ -174,7 +185,7 @@ nav a {
     max-width: 700px;
     width: auto;
     position: absolute;
-    top: 26%;
+    top: 35%;
     bottom: 0;
     left: 3%;
     right: 0;
@@ -186,26 +197,62 @@ nav a {
     z-index: 6;
 }
 
+.escuro .animais{
+    max-width: 700px;
+    width: auto;
+    position: absolute;
+    top: 40%;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 42%;
+    height: auto;
+    z-index: 5;
+}
+
+.escuro .animais2{
+    max-width: 700px;
+    width: auto;
+    position: absolute;
+    top: 46%;
+    bottom: 0;
+    left: 3%;
+    right: 0;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 42%;
+    height: auto;
+    z-index: 6;
+}
 .botoes {
     position: relative;
-    top: -250px; 
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 3;
+    z-index: 8;
     text-align: center;
-    font-size: 30px;
+    top: 120px;
 }
 
 .botao {
     display: inline-block;
+    font-size: 25px;
     margin: 10px;
-    padding: 5px 100px;
-    text-decoration: none;
+    padding: 7px 100px;
     border-radius: 35px;
     transition: background-color 0.3s;
     background-color: var(--green);
     color: var(--dark-green);
+    border: none;
     cursor: pointer;
+}
+
+.escuro .botao{
+    background-color: var(--low-green);
+    color: var(--white);
 }
 
 .fundo {
