--- a/style.css
+++ b/style.css
@@ -117,31 +117,26 @@ nav a {
     background: var(--dark-green);
 }
 
-.menu{
+.menu-items {
     position: relative;
-    top: 65px;
-    display: inline-block;
-    width: 110px;
-    height: 110px;
-    padding: 10px;
-    line-height: 1;
+    top: 100px;
+    left: -10px;
+    
+}
+
+.aceso-apagado{
     border: none;
-    background: none;
-    cursor: pointer;
+    font-size: 10px;
+    background: var(--green);
+    color: var(--white);
+    letter-spacing: 5px;
+    padding: 15px 5px;
+    border-radius: 25px;
 }
 
-.menu-login img {
-    width: 100%;
-    height: auto;
-}
-
-.menu-items{
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    top: 350px;
-    right: 70px;
-    z-index: 4;
+.escuro .aceso-apagado{
+    background: var(--dark-green);
+    color: var(--white);
 }
 
 .imagens {
@@ -257,15 +252,31 @@ nav a {
 
 .fundo {
     grid-area: 1 / 1;
+    max-width: 1440px;
     width: 100%;
     height: auto;
     display: block;
+    margin: 0 auto;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .fundo2 {
     grid-area: 1 / 1;
+    max-width: 1440px; 
     width: 100%;
     height: auto;
     display: block;
+    margin: 0 auto; 
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
     margin-top: 50px;
+}
+
+ @media (min-width: 1440px) {
+    .fundo, .fundo2 {
+        background-size: 1440px auto;
+    }
 }
