--- a/CONTEÚDOS/botanica.css
+++ b/CONTEÚDOS/botanica.css
@@ -13,12 +13,35 @@
     box-sizing: border-box;
 }
 
+body{
+    background: var(--white);
+    transition: 0.2s linear;
+}
+
+body.escuro{
+    background: var(--low-greenb);
+}
+
+.escuro ul li {
+    background: var(--dark-green);
+}
+
+.inicio.escuro{
+    background: var(--dark-green);
+}
+
+.escuro .botao-1{
+    background-color: var(--low-green);
+    color: var(--white);
+}
+
 :root {
     --light-green: #E4E6D9;
     --green: #C0CFB2;
     --dark-green: #648A70;
     --white: #fff;
     --low-green: #45624E;
+    --low-greenb: rgb(69, 98, 78, 0.6);
 }
 
 header {
@@ -93,28 +116,40 @@ nav a {
     z-index: 3;    
 }
 
-.menu{
+.menu-items {
     position: relative;
-    top: 4.0625rem;
-    display: inline-block;
-    width: 110px;
-    height: 110px;
-    padding: 10px;
-    line-height: 1;
-    border: none;
-    background: none;
-    cursor: pointer;
+    top: 100px;
+    left: -10px;
+    
 }
 
-.menu-login img {
-    width: 100%;
-    height: auto;
+.aceso-apagado{
+    border: none;
+    font-size: 10px;
+    background: var(--green);
+    color: var(--white);
+    letter-spacing: 5px;
+    padding: 15px 5px;
+    border-radius: 25px;
+}
+
+.escuro .aceso-apagado{
+    background: var(--dark-green);
+    color: var(--white);
 }
 
 .imagens {
     display: grid;
     place-items: center;
     width: 100%;
+}
+
+.escuro .primeiro{
+    color: var(--white);
+}
+
+.escuro .primeiro-p{
+    color: var(--white);
 }
 
 .primeiro{
@@ -217,6 +252,28 @@ nav a {
     max-width: 120px;
     width: auto;
     margin-top: -100px;
+}
+
+.escuro .segundo{
+    color: var(--white);
+}
+
+.escuro .segundo-p{
+    color: var(--white);
+}
+
+.escuro .lista{
+    color: var(--white);
+    
+}
+
+.escuro .botao-2{
+    color: var(--white);
+    background: var(--low-green);
+}
+.escuro .botao-3{
+    color: var(--white);
+    background: var(--low-green);
 }
 
 .segundo{
@@ -342,6 +399,33 @@ nav a {
     margin-bottom: -50px;
 }
 
+.escuro .terceiro{
+    color: var(--white);
+}
+
+.escuro .terceiro-p{
+    color: var(--white);
+}
+
+.escuro .quarto-p{
+    color: var(--white);
+}
+
+.escuro .botao-4{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .botao-5{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .botao-seta{
+    color: var(--white);
+    background: var(--low-green);
+}
+
 .terceiro{
     position: relative;
     top: 15px;
@@ -464,6 +548,46 @@ nav a {
     display: block;
     margin-top: -60px;
     margin-bottom: -50px;
+}
+
+.escuro .quarto{
+    color: var(--white);
+}
+
+.escuro .quarto-2{
+    color: var(--white);
+}
+
+.escuro .lista-2{
+    color: var(--white);
+}
+
+.escuro .quinto-p{
+    color: var(--white);
+}
+
+.escuro .sexto-p{
+    color: var(--white);
+}
+
+.escuro .botao-6{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .botao-7{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .botao-seta-2{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .botao-seta-3{
+    color: var(--white);
+    background: var(--low-green);
 }
 
 .quarto{
@@ -654,6 +778,42 @@ nav a {
     margin-bottom: -50px;
 }
 
+.escuro .quinto{
+    color: var(--white);
+}
+
+.escuro .setimo-p{
+    color: var(--white);
+}
+
+.escuro .oitavo-p{
+    color: var(--white);
+}
+
+.escuro .nono-p{
+    color: var(--white);
+}
+
+.escuro .botao-8{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .botao-9{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .botao-seta-4{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .botao-seta-5{
+    color: var(--white);
+    background: var(--low-green);
+}
+
 .quinto{
     position: relative;
     top: 15px;
@@ -814,6 +974,37 @@ nav a {
     margin-bottom: -50px;
 }
 
+.escuro .sexto{
+    color: var(--white);
+}
+
+.escuro .decimo-p{
+    color: var(--white);
+}
+
+.escuro .decimo-p1{
+    color: var(--white);
+}
+
+.escuro .decimo-p2{
+    color: var(--white);
+}
+
+.escuro .botao-10{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .botao-11{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .botao-seta-6{
+    color: var(--white);
+    background: var(--low-green);
+}
+
 .sexto{
     position: relative;
     top: 15px;
@@ -954,6 +1145,37 @@ nav a {
     display: block;
     margin-top: -60px;
     margin-bottom: -50px;
+}
+
+.escuro .setimo{
+    color: var(--white);
+}
+
+.escuro .setimo-2{
+    color: var(--white);
+}
+
+.escuro .lista-3{
+    color: var(--white);
+}
+
+.escuro .decimo-p3{
+    color: var(--white);
+}
+
+.escuro .botao-12{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .botao-13{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .botao-seta-7{
+    color: var(--white);
+    background: var(--low-green);
 }
 
 .setimo{
@@ -1103,6 +1325,37 @@ nav a {
     margin-bottom: -50px;
 }
 
+.escuro .oitavo{
+    color: var(--white);
+}
+
+.escuro .oitavo-2{
+    color: var(--white);
+}
+
+.escuro .lista-4{
+    color: var(--white);
+}
+
+.escuro .decimo-p4{
+    color: var(--white);
+}
+
+.escuro .botao-14{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .botao-15{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .botao-seta-8{
+    color: var(--white);
+    background: var(--low-green);
+}
+
 .oitavo{
     position: relative;
     top: 15px;
@@ -1238,6 +1491,24 @@ nav a {
     display: block;
     margin-top: -60px;
     margin-bottom: -50px;
+}
+
+.escuro .nono{
+    color: var(--white);
+}
+
+.escuro .decimo-p5{
+    color: var(--white);
+}
+
+.escuro .botao-16{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .botao-17{
+    color: var(--white);
+    background: var(--low-green);
 }
 
 .nono{
