--- a/CONTEÚDOS/zoologia.css
+++ b/CONTEÚDOS/zoologia.css
@@ -13,12 +13,35 @@
     box-sizing: border-box;
 }
 
+body{
+    background: var(--white);
+    transition: 0.2s linear;
+}
+
+body.escuro{
+    background: var(--low-greenb);
+}
+
+.escuro ul li {
+    background: var(--dark-green);
+}
+
+.inicio.escuro{
+    background: var(--dark-green);
+}
+
+.escuro .botao-1{
+    background-color: var(--low-green);
+    color: var(--white);
+}
+
 :root {
     --light-green: #E4E6D9;
     --green: #C0CFB2;
     --dark-green: #648A70;
     --white: #fff;
     --low-green: #45624E;
+    --low-greenb: rgb(69, 98, 78, 0.6);
 }
 
 header {
@@ -93,28 +116,40 @@ nav a {
     z-index: 3;    
 }
 
-.menu{
+.menu-items {
     position: relative;
-    top: 4.0625rem;
-    display: inline-block;
-    width: 110px;
-    height: 110px;
-    padding: 10px;
-    line-height: 1;
-    border: none;
-    background: none;
-    cursor: pointer;
+    top: 100px;
+    left: -10px;
+    
 }
 
-.menu-login img {
-    width: 100%;
-    height: auto;
+.aceso-apagado{
+    border: none;
+    font-size: 10px;
+    background: var(--green);
+    color: var(--white);
+    letter-spacing: 5px;
+    padding: 15px 5px;
+    border-radius: 25px;
+}
+
+.escuro .aceso-apagado{
+    background: var(--dark-green);
+    color: var(--white);
 }
 
 .imagens {
     display: grid;
     place-items: center;
     width: 100%;
+}
+
+.escuro .primeiro{
+    color: var(--white);
+}
+
+.escuro .primeiro-p{
+    color: var(--white);
 }
 
 .primeiro{
@@ -211,6 +246,46 @@ nav a {
     max-width: 120px;
     width: auto;
     margin-top: -100px;
+}
+
+.escuro .segundo{
+    color: var(--white);
+}
+
+.escuro .segundo-p{
+    color: var(--white);
+}
+
+.escuro .terceiro-p{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .quarto-p{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .quinto-p{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .lista{
+    color: var(--white);
+}
+.escuro .botao-2{
+    color: var(--white);
+    background: var(--low-green);
+}
+.escuro .botao-3{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .botao-seta{
+    color: var(--white);
+    background: var(--low-green);
 }
 
 .segundo{
@@ -373,6 +448,57 @@ nav a {
     display: block;
     margin-top: -60px;
     margin-bottom: -50px;
+}
+
+.escuro .terceiro{
+    color: var(--white);
+}
+
+.escuro .sexto-p{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .setimo-p{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .oitavo-p{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .nono-p{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .decimo-p{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .lista{
+    color: var(--white);
+}
+.escuro .botao-4{
+    color: var(--white);
+    background: var(--low-green);
+}
+.escuro .botao-5{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .botao-seta-2{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .botao-seta-3{
+    color: var(--white);
+    background: var(--low-green);
 }
 
 .terceiro{
@@ -552,6 +678,44 @@ nav a {
     margin-bottom: -50px;
 }
 
+.escuro .quarto{
+    color: var(--white);
+}
+
+.escuro .decimo-p1{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .decimo-p2{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .decimo-p3{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .decimo-p4{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .botao-6{
+    color: var(--white);
+    background: var(--low-green);
+}
+.escuro .botao-7{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .botao-seta-4{
+    color: var(--white);
+    background: var(--low-green);
+}
+
 .quarto{
     position: relative;
     top: 15px;
@@ -700,6 +864,34 @@ nav a {
     margin-bottom: -50px;
 }
 
+.escuro .quinto{
+    color: var(--white);
+}
+
+.escuro .decimo-p5{
+    color: var(--white);
+    
+}
+
+.escuro .decimo-p6{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .botao-8{
+    color: var(--white);
+    background: var(--low-green);
+}
+.escuro .botao-9{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .botao-seta-4{
+    color: var(--white);
+    background: var(--low-green);
+}
+
 .quinto{
     position: relative;
     top: 15px;
@@ -820,6 +1012,38 @@ nav a {
     display: block;
     margin-top: -60px;
     margin-bottom: -50px;
+}
+
+.escuro .sexto{
+    color: var(--white);
+}
+
+.escuro .sexto-2{
+    color: var(--white);
+}
+
+.escuro .decimo-p7{
+    color: var(--white);
+    
+}
+
+.escuro .lista-2{
+    color: var(--white);
+}
+
+
+.escuro .botao-10{
+    color: var(--white);
+    background: var(--low-green);
+}
+.escuro .botao-11{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .botao-seta-5{
+    color: var(--white);
+    background: var(--low-green);
 }
 
 .sexto{
@@ -977,6 +1201,37 @@ nav a {
     margin-bottom: -50px;
 }
 
+.escuro .setimo{
+    color: var(--white);
+}
+
+.escuro .setimo-2{
+    color: var(--white);
+}
+
+.escuro .decimo-p8{
+    color: var(--white);
+    
+}
+
+.escuro .lista-3{
+    color: var(--white);
+}
+
+.escuro .botao-12{
+    color: var(--white);
+    background: var(--low-green);
+}
+.escuro .botao-13{
+    color: var(--white);
+    background: var(--low-green);
+}
+
+.escuro .botao-seta-6{
+    color: var(--white);
+    background: var(--low-green);
+}
+
 .setimo{
     position: relative;
     top: 60px;
@@ -1122,6 +1377,28 @@ nav a {
     display: block;
     margin-top: -60px;
     margin-bottom: -50px;
+}
+
+.escuro .oitavo{
+    color: var(--white);
+}
+
+.escuro .decimo-p9{
+    color: var(--white);
+}
+
+.escuro .decimo-p10{
+    color: var(--white);
+    
+}
+
+.escuro .botao-14{
+    color: var(--white);
+    background: var(--low-green);
+}
+.escuro .botao-15{
+    color: var(--white);
+    background: var(--low-green);
 }
 
 .oitavo{
