--- a/CONTEÚDOS/conteudo.css
+++ b/CONTEÚDOS/conteudo.css
@@ -26,14 +26,6 @@ body.escuro{
     background: var(--low-greenb);
 }
 
-.escuro ul li {
-    background: var(--dark-green);
-}
-
-.inicio.escuro{
-    background: var(--dark-green);
-}
-
 .escuro .botao{
     background-color: var(--low-green);
     color: var(--white);
@@ -77,6 +69,13 @@ ul li {
     letter-spacing: 5px;
 }
 
+.escuro ul li {
+    background: var(--low-green);
+}
+
+.escuro .natureza{
+    background: var(--dark-green);
+}
 
 nav a {
     text-decoration: none;
@@ -137,7 +136,7 @@ nav a {
 }
 
 .escuro .aceso-apagado{
-    background: var(--dark-green);
+    background: var(--low-green);
     color: var(--white);
 }
 
