--- a/CONTEÚDOS/sobrenos.css
+++ b/CONTEÚDOS/sobrenos.css
@@ -25,14 +25,6 @@ body.escuro{
     background: var(--low-greenb);
 }
 
-.escuro ul li {
-    background: var(--dark-green);
-}
-
-.inicio.escuro{
-    background: var(--dark-green);
-}
-
 .escuro .botao-1{
     background-color: var(--low-green);
     color: var(--white);
@@ -76,6 +68,13 @@ ul li {
     letter-spacing: 5px;
 }
 
+.escuro ul li {
+    background: var(--low-green);
+}
+
+.escuro .sobrenos{
+    background: var(--dark-green);
+}
 
 nav a {
     text-decoration: none;
@@ -87,7 +86,7 @@ nav a {
 .logo-inicio{
     position: relative;
     z-index: 3;
-    top: 15rem;
+    top: 260px;
     left: 0.3125px;
 }
 
@@ -106,7 +105,7 @@ nav a {
 .sobrenos{
     font-size: 39px;
     position: relative;
-    top: 9.375rem;
+    top: 170px;
     right: 2.8125px;
     background: var(--light-green);
     padding: 30px 25px;
@@ -138,7 +137,7 @@ nav a {
 }
 
 .escuro .aceso-apagado{
-    background: var(--dark-green);
+    background: var(--low-green);
     color: var(--white);
 }
 
@@ -163,15 +162,19 @@ nav a {
 
 .um{
     position: relative;
-    top: 20px;
-    left: -380px;
+    top: 10px;
+    left: -350px;
     background: var(--green);
-    padding: 100px;
+    padding: 55px 30px;
     margin: 10px 5px;
     border-radius: 25px;
     margin-bottom: 0;
     display: inline-block;
     z-index: 3; 
+}
+
+.um img{
+    max-width: 100px;
 }
 
 .escuro .um{
@@ -180,15 +183,19 @@ nav a {
 
 .dois{
     position: relative;
-    top: 20px;
-    left: -340px;
+    top: 10px;
+    left: -280px;
     background: var(--green);
-    padding: 100px;
+    padding: 55px 30px;
     margin: 10px 5px;
     border-radius: 25px;
     margin-bottom: 0;
     display: inline-block;
     z-index: 3; 
+}
+
+.dois img {
+    max-width: 100px;
 }
 
 .escuro .dois{
@@ -197,15 +204,19 @@ nav a {
 
 .tres{
     position: relative;
-    top: 20px;
-    left: -300px;
+    top: 10px;
+    left: -200px;
     background: var(--green);
-    padding: 100px;
+    padding: 55px 30px;
     margin: 10px 5px;
     border-radius: 25px;
     margin-bottom: 0;
     display: inline-block;
     z-index: 3; 
+}
+
+.tres img {
+    max-width: 100px;
 }
 
 .escuro .tres{
@@ -214,15 +225,19 @@ nav a {
 
 .quatro{
     position: relative;
-    top: 20px;
-    left: -250px;
+    top: 10px;
+    left: -110px;
     background: var(--green);
-    padding: 100px;
+    padding: 55px 30px;
     margin: 10px 5px;
     border-radius: 25px;
     margin-bottom: 0;
     display: inline-block;
     z-index: 3; 
+}
+
+.quatro img{
+    max-width: 100px;
 }
 
 .escuro .quatro{
@@ -231,10 +246,10 @@ nav a {
 
 .quinto{
     position: relative;
-    top: -227px;
-    left:650px;
+    top: 10px;
+    left: -10px;
     background: var(--green);
-    padding: 100px;
+    padding: 50px 30px;
     margin: 10px 5px;
     border-radius: 25px;
     margin-bottom: 0;
@@ -242,11 +257,17 @@ nav a {
     z-index: 3; 
 }
 
+.quinto img{
+    max-width: 100px;
+}
+
 .escuro .quinto{
     background: var(--low-green);
 }
 
 .nomes{
+    position: relative;
+    top: 20px;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 10px;
