--- a/CONTEÚDOS/botanica.css
+++ b/CONTEÚDOS/botanica.css
@@ -37,19 +37,9 @@ body.escuro{
 }
 
 header {
-    position: relative;
-    padding: 20px;
     display: flex;
     justify-content: center;
-    margin-bottom: 0;
 }
-
-ul{
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
-
 
 ul li {
     position: relative;
@@ -120,7 +110,20 @@ nav a {
     position: relative;
     top: 100px;
     left: -10px;
-    
+}
+
+.entrar {
+    max-width: 60px;
+}
+
+.entrar2 {
+    background: none;
+    border: none;
+}
+
+#info {
+    display: none;
+    transition: all 0.3s ease-in-out;
 }
 
 .aceso-apagado{
