--- a/CONTEÚDOS/conteudo.css
+++ b/CONTEÚDOS/conteudo.css
@@ -41,24 +41,14 @@ body.escuro{
 }
 
 header {
-    position: relative;
-    padding: 20px;
     display: flex;
     justify-content: center;
-    margin-bottom: 0;
 }
-
-ul{
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
-
 
 ul li {
     position: relative;
     top: 90px;
-    left: -70px;
+    left: -50px;
     font-size: 30px;
     display: inline-block;
     margin: 0 10px; 
@@ -122,7 +112,20 @@ nav a {
     position: relative;
     top: 100px;
     left: -10px;
-    
+}
+
+.entrar {
+    max-width: 60px;
+}
+
+.entrar2 {
+    background: none;
+    border: none;
+}
+
+#info {
+    display: none;
+    transition: all 0.3s ease-in-out;
 }
 
 .aceso-apagado{
