--- a/CONTEÚDOS/sobrenos.css
+++ b/CONTEÚDOS/sobrenos.css
@@ -40,19 +40,9 @@ body.escuro{
 }
 
 header {
-    position: relative;
-    padding: 20px;
     display: flex;
     justify-content: center;
-    margin-bottom: 0;
 }
-
-ul{
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
-
 
 ul li {
     position: relative;
@@ -121,8 +111,16 @@ nav a {
 .menu-items {
     position: relative;
     top: 100px;
-    left: -10px;
-    
+    left: -10px;   
+}
+
+.entrar {
+    max-width: 60px;
+}
+
+.entrar2 {
+    background: none;
+    border: none;
 }
 
 .aceso-apagado{
