--- a/QUIZ/quiz.css
+++ b/QUIZ/quiz.css
@@ -37,19 +37,9 @@ body.escuro{
 }
 
 header {
-    position: relative;
-    padding: 20px;
     display: flex;
     justify-content: center;
-    margin-bottom: 0;
 }
-
-ul{
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
-
 
 ul li {
     position: relative;
@@ -59,7 +49,6 @@ ul li {
     display: inline-block;
     margin: 0 10px; 
     padding: 10px 34px;
-    margin-bottom: 0;
     background: var(--green);
     border-radius: 25px;
     letter-spacing: 5px;
@@ -118,8 +107,16 @@ nav a {
 .menu-items {
     position: relative;
     top: 100px;
-    left: -10px;
-    
+    left: -10px;   
+}
+
+.entrar {
+    max-width: 60px;
+}
+
+.entrar2 {
+    background: none;
+    border: none;
 }
 
 .aceso-apagado{
@@ -192,8 +189,7 @@ nav a {
 
 .botoes {
     position: relative;
-    left: 130px;
-    transform: translate(-50%, -50%);
+    bottom: 20px;
     z-index: 3;
     text-align: center;
     font-size: 30px;
@@ -201,8 +197,7 @@ nav a {
 
 .botao-1 {
     display: inline-block;
-    margin: 10px;
-    padding: 5px 100px;
+    padding: 5px 90px;
     text-decoration: none;
     border-radius: 35px;
     transition: background-color 0.3s;
